--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,7 @@
 body {
 	background: #8a9cb4;
-	color:black; 
-	text-align:left;
-	background: url('https://lh3.google.com/u/0/d/0B1lgjJN2kGmDNG5PYVNTbEp4MEE=w1290-h837-iv1'); 
-      background-size: cover;
-      color: white;
+	color:pink; 
+	text-align:left; 
      }
 img {
 	margin: 40px 40px 40px 40px;
